--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
         <div id="hero-image">
 
         </div>
+        <div id="cover-text">
+            <h2>Love Running</h2>
+            <h3>Dublin Docklands & Pheonix Park</h3>
+        </div>
     </section>
     <section>
         Club Ethos
