--- a/index.html
+++ b/index.html
@@ -41,8 +41,17 @@
             <h3>Dublin Docklands & Pheonix Park</h3>
         </div>
     </section>
-    <section>
-        Club Ethos
+    <section id="club-ethos">
+        <h2>Why love running with us?</h2>
+        <div id="left-about">
+            <h2>Feel healthy</h2>
+            <p>djshfdsjfgsdjhfgjsdfghdsgfjhsdfghj</p>
+
+            <h2>Feel Free</h2>
+            <p>djshfdsjfgsdjhfgjsdfghdsgfjhsdfghj</p>
+        </div>
+        <div id="right-about">Right</div>
+        <div id="center-about">Center</div>
     </section>
     <section>
         Running locations, distances and times
