--- a/gallery.html
+++ b/gallery.html
@@ -32,6 +32,17 @@
             </ul>
         </nav>
     </header>
+    <section id="photos">
+        <img src="assets/images/athletes.jpg" alt="Two athletes running together">
+        <img src="assets/images/girls.jpg" alt="girls running">
+        <img src="assets/images/man.jpg" alt="man running">
+        <img src="assets/images/mud-run.jpg" alt="running in mud">
+        <img src="assets/images/runner1.jpg" alt="runner1 running">
+        <img src="assets/images/runner2.jpg" alt="runner 2 running">
+        <img src="assets/images/runner3.jpg" alt="runner 3 running">
+        <img src="assets/images/runner4.jpg" alt="runner 4 running">
+        <img src="assets/images/running_gang.jpg" alt="running gang running">
+    </section>
     
     <footer>
         <ul class="social-networks">
